--- a/front/index.html
+++ b/front/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/svg+xml" href="src/assets/img/favicon.svg" />
+    <link rel="icon" type="image/png" href="src/assets/img/favicon.png" />
     <title>Eroski App</title>
   </head>
   <body>
